fix(wrap) add wrap to see in smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a{
 
 .first{
     background-color: #1f2937;
-    padding: 0px 100px 100px;
+    padding: 20px 100px 100px;
 }
 
 .header{
@@ -29,9 +29,9 @@ a{
     font-size: 24px;
     color: #f9faf8;
     margin-bottom: 100px;
-    text-wrap: nowrap;
-}
 
+
+}
 
 .logo{
     display: flex;
@@ -45,7 +45,8 @@ a{
 .hero{
     display: flex;
     gap: 50px;
-    flex-grow: 0;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .hero-title{
@@ -71,9 +72,10 @@ a{
     justify-content: center;
     background-color: gray;
     color: white;
-    flex-grow: 1;
-    flex-shrink: 0;
+    flex: 0 0 350px;
+    height: 230px;
     padding: 0px 20px;
+
 }
 
 
@@ -101,6 +103,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     flex-shrink: 0;
 }
 
@@ -110,8 +113,6 @@ a{
     color: #1f2937;
     margin-bottom: 50px;
     margin-top: 20px;
-    text-wrap: nowrap;
-    
 }
 
 .box-container{
@@ -169,6 +170,8 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     border-radius: 10px;
     box-sizing: border-box;
     margin: 100px 50px;
@@ -190,6 +193,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
     width: 150px;
     height: 30px;
     background-color: #3882f6;
